--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>Naimat</PageTitle>
+<PageTitle>O224219</PageTitle>
 
 <head>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -9,9 +9,7 @@
     <link rel="icon" type="image/png" href="images/Logo.png" />
 
 </head>
-<!-- Global Navbar -->
 
-<link rel="icon" type="image/png" href="images/logo.png" />
 <NavMenu />
 
 <!-- Main Content -->
